# tabletop-calendar

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Doxyfile.bak  README.md
docs/GUI/: screenlayout.html  stylesheet.css
src/: CMakeLists.txt
src/displayservice/: CMakeLists.txt  displayservice.c  displayservice.cpp
src/displayservice/include/: displayservice.h  layout_EPD_7in3f_monthly.h
src/main/: CMakeLists.txt  main.cpp  main.h
src/projectinfomodule/: CMakeLists.txt  module_dev.cpp  projectinfomodule.cpp
src/projectinfomodule/include/: projectinfomodule.h
src/timedateservice/: CMakeLists.txt  timedateservice.cpp
src/timedateservice/include/: timedateservice.h
tests/: CMakeLists.txt
tests/main/: CMakeLists.txt  main_test.cpp
tests/timedateservice/: CMakeLists.txt  timedateservice_test.cpp
wrappers/epaper/: main.c  waveshare_eink.c
wrappers/epaper/include/: waveshare_eink.h
